[package]
name = "cpp_regexp"
version = "0.1.0"
edition = "2018"
build = "build.rs"
authors = ["hjiayz <hjiayz@163.com>"]
license = "MIT OR Apache-2.0"
description = "cpp std::regex"
repository = "https://github.com/hjiayz/cpp_regex.git"

[dependencies]
cpp = "0.5"

[build-dependencies]
cpp_build = "0.5"
