[package]
name = 'cpp_regexp'
version = '0.6.1'
edition = '2018'
build = 'build.rs'
authors = ['hjiayz <hjiayz@163.com>']
license = 'MIT OR Apache-2.0'
description = 'cpp std::regex'
repository = 'https://github.com/hjiayz/cpp_regex.git'
[dependencies.cxx]
version = '1.0'
features = ['c++14']

[build-dependencies]
cxx-build = '1.0'
